# KomputeTest

./: CMakeLists.txt  Main.cpp  README.md
